# planF

./: .gitignore  README.md  api.py  app.py  prompts.py  pyproject.toml
.streamlit/: secrets_example.toml
python/: api.py  app.py  pyproject.toml  video.csv
python/tests/: test_business_plan.py
tests/: test_business_plan.py
typescript/: deno.json  fresh.gen.ts
typescript/api/: main.ts  test.ts
typescript/routes/: index.tsx
