[tool.poetry]
name = "exit-stategy"
version = "0.1.0"
description = ""
authors = ["Mathias APARICIO"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.6"
streamlit = "^1.39.0"
pandas = "^2.2.3"
langchain-community = "^0.3.4"
langchain-openai = "^0.2.5"
markdown-pdf = "^1.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["ALL"]